// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeaderSortable with sort direction ASC renders correctly 1`] = `
<div>
  <th
    aria-sort="ascending"
    class="css-7wxia7-boxStyles-TableHeaderSortable"
    scope="col"
  >
    <button
      class="css-1bb77vf-BaseButton-boxStyles-TableHeaderSortable"
      type="button"
    >
      Example
      <svg
        aria-hidden="true"
        class="css-t181ux-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3L12 20"
        />
        <path
          d="M17 16L12 21L7 16"
        />
      </svg>
    </button>
  </th>
</div>
`;

exports[`TableHeaderSortable with sort direction DESC renders correctly 1`] = `
<div>
  <th
    aria-sort="descending"
    class="css-7wxia7-boxStyles-TableHeaderSortable"
    scope="col"
  >
    <button
      class="css-1bb77vf-BaseButton-boxStyles-TableHeaderSortable"
      type="button"
    >
      Example
      <svg
        aria-hidden="true"
        class="css-t181ux-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 21V4"
        />
        <path
          d="M7 8L12 3L17 8"
        />
      </svg>
    </button>
  </th>
</div>
`;

exports[`TableHeaderSortable with sort direction undefined renders correctly 1`] = `
<div>
  <th
    class="css-1vsi0cy-boxStyles-TableHeaderSortable"
    scope="col"
  >
    <button
      class="css-16z398q-BaseButton-boxStyles-TableHeaderSortable"
      type="button"
    >
      Example
      <svg
        aria-hidden="true"
        class="css-t181ux-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3L12 20"
        />
        <path
          d="M17 16L12 21L7 16"
        />
      </svg>
    </button>
  </th>
</div>
`;
